sanger/sites/mfi-atlas/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mfi-atlas
spec:
  selector:
    matchLabels:
      app: mfi-atlas
  replicas: 1
  template:
    metadata: 
      name: mfi-atlas
      labels:
        app: mfi-atlas
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: mfi-atlas
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/mfi-atlas/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mfi-atlas-p13-snrna-seq
spec:
  selector:
    matchLabels:
      app: mfi-atlas-p13-snrna-seq
  replicas: 1
  template:
    metadata: 
      name: mfi-atlas-p13-snrna-seq
      labels:
        app: mfi-atlas-p13-snrna-seq
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mfi-atlas-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: mfi-atlas-p13-snrna-seq
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/p13_snrna-seq.h5ad", "--title", "P13 snRNA-seq", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "2Gi"
            cpu: 1
---
