sanger/sites/mfi-atlas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfi-atlas
  labels:
    app: mfi-atlas
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: mfi-atlas
---
apiVersion: v1
kind: Service
metadata:
  name: mfi-atlas-p13-snrna-seq
  labels:
    app: mfi-atlas-p13-snrna-seq
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: mfi-atlas-p13-snrna-seq
---
